# marlin

./: CMakeLists.txt  README.md  description.md  victoribironke2019@gmail.com
include/: position.hpp  solver.hpp  transposition.hpp
src/: main.cpp  position.cpp  solver.cpp  transposition.cpp
tests/: test_position.cpp
